[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/World.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/hud/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/hud/SidePanel.tscn" type="PackedScene" id=4]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="World" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 80 )

[node name="HUD" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 1024.0
margin_bottom = 64.0
rect_min_size = Vector2( 1024, 80 )

[node name="SidePanel" parent="." instance=ExtResource( 4 )]
margin_left = 1024.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 256, 720 )

[connection signal="statusInfoChanged" from="World" to="." method="_on_World_statusInfoChanged"]
[connection signal="resetGame" from="HUD" to="." method="_on_HUD_resetGame"]
[connection signal="startWave" from="SidePanel" to="." method="_on_SidePanel_startWave"]
